examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: demo
  labels:
    app: myapp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dmo-service.example.com
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
