examples/servicedemo.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: demo
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
